--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://alexeyvorobyev.github.io/vega_admin_frontend/",
   "scripts": {
     "start:dev": "vite",
     "build": "tsc && vite build",
     "build-no-tsc": "vite build",
-    "serve:prod": "serve -s dist"
+    "serve:prod": "serve -s dist",
+    "download:schema": "apollo client:download-schema --endpoint=http://10.5.0.5/api/graphql schema.json",
+    "types": "graphql-codegen --config src/types/codegen.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
     "@fontsource/roboto": "^5.0.8",
+    "@graphql-codegen/cli": "^5.0.2",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.15.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
@@ -24,6 +27,7 @@
     "@mui/x-date-pickers": "^6.19.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.8.3",
+    "apollo": "^2.34.0",
     "chart.js": "^4.4.0",
     "date-fns": "^3.2.0",
     "gh-pages": "^6.0.0",
@@ -53,6 +57,10 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.69.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.8"
+    "vite": "^4.4.8",
+    "vite-plugin-graphql-loader": "^3.0.1"
+  },
+  "overrides": {
+    "@apollo/federation": "0.38.1"
   }
 }
